--- a/assets/admin/pages/css/inbox.css
+++ b/assets/admin/pages/css/inbox.css
@@ -19,7 +19,7 @@ Inbox Page
   font-weight: 300;
 }
 
-/*Imbox Menu*/
+/*Inbox Menu*/
 .inbox .inbox-nav {
   margin: 0;
   padding: 0;
@@ -108,7 +108,7 @@ Inbox Page
   line-height: 14px;
 }
 
-.inbox tr {
+.inbox tr, .inbox tr a {
   color: #777;
   font-size: 13px;
 }
