Font Awesome on tables
Changed from omg tag to a more responsive approach. FA icons.
- Bug fixes for previous commit (blog)

--- a/css/icons.css
+++ b/css/icons.css
@@ -6,3 +6,15 @@
 	color:#b58f4d;
 	font-size:16px;
 }
+.pic {
+	color:#666;
+	font-size:16px;
+}
+.activei {
+	color:#063;
+	font-size:16px;
+}
+.noactivei {
+	color:#a94442;
+	font-size:16px;
+}
